--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img src="/images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh">
       <h3>Sources</h3>
       <p href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</p>
-      <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
+      <p href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</P>
     </div>
   </div>
 </body>
