--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <h3>Sources</h3>
       <div>
         <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
+      </div>
       <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
     </div>
     </div>
